--- a/index.html
+++ b/index.html
@@ -10,26 +10,17 @@
 
   <body>
 
+	<div id="ElEmploisDuTemps">
+		<div id="Lundi" class="jour"><dt><dl style="font-weight: bold;">Lundi</dl></dt></div>
 
+		<div id="Mardi" class="jour"><dt><dl style="font-weight: bold;">Mardi</dl></dt></div>
 
-	<div class="grid">
-		<div class="cours">
-			<label class="horaireS textHeure">8h10</label>
-			<label class="matier textCours">Anglais</label>
-			<label class="auteur textCours">Mr.Kouyio</label>
-			<label class="classe textCours">C-210</label>
-			<label class="horaireE textHeure">9h05</label>
-		</div><br>
-		<div class="cours">
-			<label class="horaireS textHeure">9h05</label>
-			<label class="matier textCours">Français</label>
-			<label class="auteur textCours">Mr.Sayop</label>
-			<label class="classe textCours">C-312</label>
-			<label class="horaireE textHeure">10h00</label>
-		</div>
+		<div id="Mercredi" class="jour"><dt><dl style="font-weight: bold;">Mercredi</dl></dt></div>
+
+		<div id="Jeudi" class="jour"><dt><dl style="font-weight: bold;">Jeudi</dl></dt></div>
+
+		<div id="Vendredi" class="jour"><dt><dl style="font-weight: bold;">Vendredi</dl></dt></div>
 	</div>
-
-	
 
 	<script src="script.js"></script>
   </body>
