--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <body>
 
 	<div id="ElEmploisDuTemps">
-		<div id="Lundi" class="jour"><dt><dl style="font-weight: bold;">Lundi</dl></dt></div>
+		<div id="Lundi" class="jour"><dt><dl style="font-weight: bold; color: rgb(144, 94, 219);">Lundi</dl></dt></div>
 
-		<div id="Mardi" class="jour"><dt><dl style="font-weight: bold;">Mardi</dl></dt></div>
+		<div id="Mardi" class="jour"><dt><dl style="font-weight: bold; color: rgb(144, 94, 219);">Mardi</dl></dt></div>
 
-		<div id="Mercredi" class="jour"><dt><dl style="font-weight: bold;">Mercredi</dl></dt></div>
+		<div id="Mercredi" class="jour"><dt><dl style="font-weight: bold; color: rgb(144, 94, 219);">Mercredi</dl></dt></div>
 
-		<div id="Jeudi" class="jour"><dt><dl style="font-weight: bold;">Jeudi</dl></dt></div>
+		<div id="Jeudi" class="jour"><dt><dl style="font-weight: bold; color: rgb(144, 94, 219);">Jeudi</dl></dt></div>
 
-		<div id="Vendredi" class="jour"><dt><dl style="font-weight: bold;">Vendredi</dl></dt></div>
+		<div id="Vendredi" class="jour"><dt><dl style="font-weight: bold; color: rgb(144, 94, 219);">Vendredi</dl></dt></div>
 	</div>
 
 	<script src="script.js"></script>
